Project4/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    name: dev
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
