Project4/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-service
  namespace: dev
spec:
  type: LoadBalancer
  selector:
    app: web-app
  ports:
  - port: 80
    targetPort: 3000
