Project4/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-only-from-svc
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: web-app
  ingress:
  - from:
    - podSelector: {}
    ports:
    - protocol: TCP
      port: 3000
  policyTypes:
  - Ingress
